<resources>
    <string name="app_name">Проф_Навигатор_Якутии</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ПРОФ_НАВИГАТОР_ЯКУТИИ</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="about_info">Разработано студантами ГБПОУ РС(Я) "Покровский колледж"</string>
    <string name="menu_home">Главное меню</string>
    <string name="menu_gallery">Профиль</string>
    <string name="menu_slideshow">Организации</string>
    <string name="menu_blank">О учреждении</string>
    <string name="menu_soc_gar">Социальные гарантии</string>
    <string name="menu_pro">Профессии</string>
    <string name="home_second">Home Second</string>
    <string name="Name">Введите Имя</string>
    <string name="SecondName">Фамилия</string>
    <string name="ThirdName">Отчество</string>
    <string name="Test">Пройти Тест</string>
    <string name="YM">"Юридический адрес 677000, Республика Саха (Якутия), г. Якутск, ул. Пояркова, д. 15  "</string>
    <string name="FM">Фактический адрес 677000, Республика Саха (Якутия), г. Якутск, ул. Пояркова, д. 15</string>
    <string name="CN">Контактные телефоны: (4112) 34-11-35 (приемная директора), 34-13-76 (бухгалтерия), 34-11-94 (учебная часть), 34-18-95 (заочный отдел).</string>
    <string name="EMail">Официальный сайт: <a href="http://ysxt.ru">http://ysxt.ru</a></string>
    <string name="mail">Адрес электронной почты: ysxt@gov14.ru.</string>
    <string name="professii">Профессии</string>
    <string name="specialnosti">Профессии</string>
    <string name="info">Информация</string>
    <string name="adress_PC">678000, Республика Саха (Якутия),  Хангаласский улус, г.Покровск,  ул. Братьев Ксенофонтовых, 31</string>
    <string name="phone_PC">"тел/факс: 8 (41144) 4-52-42"</string>
    <string name="email_PC">pk_pokrovsk@gov14.ru</string>
    <string name="name_dir_PC">ХАБАРОВ  Владислав  Гаврильевич</string>
    <string name="dolznost">Директор</string>
    <string name="college_PC">ГБПОУ РС (Я) «ПОКРОВСКИЙ КОЛЛЕДЖ»</string>
    <string name="site_PC">http://college-pokrovsk.ru</string>
    <string name="points">Прох. балл</string>
    <string name="place">Бюдж. места</string>
    <string name="cost">Стоимость</string>
    <string name="nazvanie">Название</string>
    <string name="college_APT">ГАПОУ РС (Я) "Алданский политехнический техникум"</string>
    <string name="college_MRTK">ГАПОУ РС (Я) "Региональный технический колледж в г. Мирном"</string>
    <string name="UYTK">ГАПОУ РС(Я) \"Южно-Якутский технологический колледж\"</string>
    <string name="APT">Алданский политехнический техникум</string>
    <string name="MRTK">Региональный технический колледж в г. Мирном</string>
    <string name="UYTK_mini">Южно-Якутский технологический колледж</string>
    <string name="PC_mini">Покровский колледж</string>
    <string name="ysht">Якутский сельскохозяйственный техникум</string>
    <string name="CD">Якутский колледж технологии и дизайна традиционных промыслов народов Якутии</string>
    <string name="CC">Якутский колледж культуры и искусств Республики Саха (Якутия)</string>
    <string name="yipk">Якутский индустриально-педагогический колледж</string>
    <string name="ykst">Якутский коммунально-строительный техникум</string>
    <string name="ykse">Якутский колледж связи и энергетики им. П.И. Дудкина</string>
    <string name="pokrovsk">Покровский колледж</string>
    <string name="name_dir_MRTK">БЕРЕЗОВОЙ  Владимир  Викторович</string>
    <string name="adress_MRTK">678170, Республика Саха (Якутия),  г. Мирный, ул. Ленина, д.1</string>
    <string name="phone_MRTK">"тел/факс: 8 (41136) 3-53-31"</string>
    <string name="email_MRTK">rtkm_mirniy@gov14.ru</string>
    <string name="site_MRTK">https://mrtk-edu.ru/</string>
    <string name="soc_garant">Социальные гарантии</string>
    <string name="gov_ac_st">"Государственная академическая стипендия "</string>
    <string name="gov_soc_st">"Государственная социальная стипендия "</string>
    <string name="mery_soc_pod">"Меры социальной поддержки "</string>
    <string name="pitanie">Меры социальной поддержки (питание)</string>
    <string name="soc_gar_detyam_sir">Государственные гарантии детям-сиротам</string>
    <string name="soc_gar_child">"Детям-сиротам и детям, оставшимся без попечения родителей, лицам из числа детей-сирот и детей, оставшихся без попечения родителей, лицам, потерявшим в период обучения обоих родителей или единственного родителя, обучающимся по очной форме обучения по образовательным программам среднего профессионального образования, профессиональными образовательными организациями, в которых они обучаются, предусматриваются следующие государственные гарантии: выплата государственной социальной стипендии; выплата ежегодного пособия на приобретение учебной литературы и письменных принадлежностей; обеспечение бесплатным питанием, бесплатным комплектом одежды, обуви и мягким инвентарем; обеспечение бесплатным проездом в период обучения и один раз в год к месту жительства и обратно к месту учебы; обеспечение проживанием на период обучения; организация отдыха и оздоровления; выплата выпускникам единовременного денежного пособия и обеспечение бесплатным комплектом одежды, обуви, мягким инвентарем и оборудованием. "</string>
    <string name="gov_ac_st_text">Государственная академическая стипендия - признается денежная выплата, назначаемая обучающимся в целях стимулирования и (или) поддержки освоения ими соответствующих образовательных программ.
        С 01 сентября 2019 г. размер норматива государственной академической стипендии составляет в улусах (районах), расположенных до Полярного круга – 1 674 рубля (с учетом районного коэффициента 1,7) и в улусах (районах), расположенных за Полярным кругом – 1 970 рублей (с учетом районного коэффициента 2,0).
        Размер стипендии индексируется ежегодно, так в 2020 году увеличение составит 3%, в 2019 - 4%, 2018 - 4%.
        Получателями государственной академической стипендии являются студенты очной формы, обучающиеся за счёт средств государственного бюджета Республики Саха (Якутия) - все первокурсники с 1 сентября до первой сессии и после сессии те, кто показал хорошие и отличные успехи в учебе. При этом образовательная организация имеет право повышать размер стипендии в рамках стипендиального фонда. В основном назначаются повышающие коэффициенты «хорошистам» 25% и «отличникам» 50% от размера стипендии.
        </string>
    <string name="pitanie_text">"Для обучающихся профессиональных образовательных организаций из малоимущих семей предусмотрена социальная поддержка в виде денежной компенсации за питание в период обучения. Право на получение данной меры социальной поддержки имеют обучающиеся профессиональных образовательных организаций, осваивающие образовательные программы среднего профессионального образования по очной форме обучения за счет средств государственного бюджета Республики Саха (Якутия), предоставившие справку, выданную органом социальной защиты населения по месту жительства, о признании семьи (одиноко проживающего гражданина) малоимущей(-им). "</string>
    <string name="kv">Квалификация</string>
    <string name="lvl_text">Базовый</string>
    <string name="lvl">Уровень (для ППССЗ)</string>
    <string name="srok">Срок обучения</string>
    <string name="mesta">Форма обучения</string>
    <string name="ooo9">Очно, основное общее образование (на базе 9 кл.)</string>
    <string name="kol_vo">Количество</string>
    <string name="m25">25</string>
    <string name="cod_deyat">"Содержание деятельности "</string>
    <string name="cod_deyat_text">Выпускник должен быть готов к профессиональной деятельности по техническому обслуживанию, эксплуатации, ремонту, наладке и испытаниям электрооборудования электрических станций, сетей и систем в качестве техника на электрических станциях, в сетевых компаниях, в электромонтажных управлениях, в проектных, ремонтных и наладочных организациях различных организационно-правовых форм энергетического профиля.</string>
    <string name="vidy_deyat">Основные виды деятельности техника:</string>
    <string name="vidy_deyat_text">"  производственно-технологическая – техническое обслуживание, эксплуатация, ремонт, наладка и испытания основного и вспомогательного электротехнического оборудования электрических станций, сетей и систем; контроль и управление технологическими процессами производства; передача, распределение, потребление, учет и реализация электрической энергии в электроэнергетических системах; диагностика повреждения оборудования и ликвидация аварий, анализ причин отказов в работе электрооборудования электроэнергетических систем и разработка мероприятий по их устранению;
        \n  организационно-управленческая – организация работы коллектива исполнителей; планирование и организация производственных работ; выбор оптимальных решений при планировании работ в условиях нестандартных ситуаций; участие в анализе хозяйственной и финансовой деятельности трудового коллектива, участка, предприятия в целом; маркетинг; участие в оценке экономической эффективности производственной деятельности; обеспечение техники безопасности на производственном участке; разработка мероприятий по охране труда и окружающей среды;
        \n  конструкторско-технологическая – подготовка технической документации по техническому обслуживанию, эксплуатации, ремонту и наладке электрооборудования электрических станций, сетей и систем;
        \n  опытно-экспериментальная – испытание новых образцов электрооборудования, его элементов и электрических схем; наладка и испытание нового оборудования."</string>
    <string name="vidy_truda">Виды труда:</string>
    <string name="vidy_truda_text">"  Обслуживание\n  Производство"</string>
    <string name="obekty">Объектами профессиональной деятельности являются:</string>
    <string name="obekty_text">"  Техник-электрик обеспечивает монтаж, эксплуатацию и ремонт устройств, связанных с получением электрической энергии, ее преобразованием, распределением и потреблением."</string>
    <string name="sphera_deyat">Сферы деятельности:</string>
    <string name="sphera_deyat_text">\ 1. Электрические станции (ГРЭС, ТЭЦ, ГЭС)
        \n 2. Электрические сети Электрические подстанции
        \n 3. Отделы главного энергетика промышленных предприятий
        \n 4. Коммерческие предприятия энергетического профиля (Энергосбыт, Энергонадзор)"</string>
    <string name="srok_2_10">"2 года  10 мес"</string>
    <string name="minus">-</string>
    <string name="s31_02_02">"Акушерское дело"</string>
    <string name="kv_text_s31_02_02"> Акушерка/акушер</string>
    <string name="srok_3">"3 года</string>
</resources>