<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/socGarant"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_soc_gar" />
        <item
            android:id="@+id/blankFragment2"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_pro" />
        
    </group>
</menu>
