<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pc.profnavykt.Povar_college" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_s23_01_01"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"

                android:text="@string/ykst" />

            <Button
                android:id="@+id/button7"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"

                android:text="@string/ykse" />

            <Button
                android:id="@+id/b"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"

                android:text="@string/CC" />

            <Button
                android:id="@+id/button"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"

                android:text="@string/ysht" />

            <Button
                android:id="@+id/b_s23_02_07"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"

                android:text="@string/yipk" />

            <Button
                android:id="@+id/b_s23_01_06"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"

                android:text="@string/CD" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
