<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pc.profnavykt.ui.SocGarant" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button16"
                style="@style/soc_gar"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"
                android:background="?attr/selectableItemBackground"
                android:text="@string/soc_gar_detyam_sir" />

            <Button
                android:id="@+id/button11"
                style="@style/soc_gar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"
                android:background="?attr/selectableItemBackground"
                android:text="@string/gov_ac_st" />

            <Button
                android:id="@+id/button14"
                style="@style/soc_gar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"
                android:background="?attr/selectableItemBackground"
                android:text="@string/mery_soc_pod" />

            <Button
                android:id="@+id/button15"
                style="@style/soc_gar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"
                android:background="?attr/selectableItemBackground"
                android:text="@string/pitanie" />

            <Button
                android:id="@+id/button13"
                style="@style/soc_gar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightList"
                android:background="?attr/selectableItemBackground"
                android:text="@string/gov_soc_st" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
